--- a/src/less/transactional.less
+++ b/src/less/transactional.less
@@ -7,7 +7,8 @@
   position: relative;
 
   h1 {
-    font-family: CompassSans-Regular,AvenirNextLTPro-Medium,serif;
+    font-size: 2em;
+    font-family: CompassSans-Medium,AvenirNextLTPro-Medium,serif;
     font-weight: 700;
     color: #276890;
     text-transform: uppercase;
@@ -201,6 +202,13 @@
         margin-right: 10px;
       }
     }
+  }
+
+  .successgif {
+    position: absolute;
+    width: 100%;
+    bottom:0;
+    display: block;
   }
 
   #finished-registration {
