--- a/src/less/postheader.less
+++ b/src/less/postheader.less
@@ -81,14 +81,14 @@
       justify-content: space-between;
       margin: 0;
       list-style: none;
-
+/*
       #account{
         display:none !important;
 				opacity: 0 !important;
 				width: 0px !important;
 				overflow: hidden !important;
       }
-
+*/
       li::before {
         display: inline-block;
         font-style: normal;
