--- a/custom-signup-account.hbs
+++ b/custom-signup-account.hbs
@@ -124,8 +124,8 @@
 
 		function displaySuccess(successMessage) {
 			clearNotifications();
-			successEl.innerText = successMessage
-			$('.card').append('<img class="successgif" src="{{asset img/success.gif}}"');
+			successEl.innerText = successMessage;
+			$('.card').append('<img src="/assets/images/success.gif">');
 		}
 
 		function clearNotifications() {
