account signup stuff

--- a/custom-signup-account.hbs
+++ b/custom-signup-account.hbs
@@ -125,7 +125,7 @@
 		function displaySuccess(successMessage) {
 			clearNotifications();
 			successEl.innerText = successMessage;
-			$('.card').append('<img src="/assets/images/success.gif">');
+			$('.card').append('<img class="successgif" src="/assets/images/success.gif">');
 		}
 
 		function clearNotifications() {
