--- a/src/less/transactional.less
+++ b/src/less/transactional.less
@@ -89,6 +89,8 @@
       width: 400px;
       margin: auto;
       text-align: left;
+      transition: all .4s ease-out;
+      overflow-x: hidden;
 
       label {
         text-align: left;
