account signup stuff

--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -20,6 +20,17 @@
   margin-bottom: 0;
   font-weight: 500;
 
+  figure {
+    margin: 0;
+  }
+
+  iframe {
+    /*box-shadow: 0 0 22px #8d9fb9;*/
+    margin-bottom: 40px;
+    width: 100%;
+    left:0;
+  }
+
   .page-title {
     margin: 40px 40px 30px !important;
     font-weight: 500;
