--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -49,8 +49,9 @@
 
 		.title {
 			color: @white;
-			font-size: 20px;
-			margin: 10px 0 20px!important;
+			font-weight: 800;
+			margin: 10px 0 30px!important;
+			font-size: 1.5em;
 		}
 
 		& > div > div:last-child {
