account signup stuff

--- a/src/less/code.less
+++ b/src/less/code.less
@@ -14,6 +14,10 @@ pre {
     max-height: 400px;
   }
 
+  code {
+    overflow-y: hidden;
+  }
+
   span {
     display: inline-block;
   }
@@ -46,7 +50,7 @@ code {
 
 .hljs {
   display: block;
-  overflow-y: scroll!important;
+  overflow-y: hidden!important;
   overflow-x: hidden!important;
   background: #353540!important;
   overflow-wrap: break-word;
