--- a/src/less/post.less
+++ b/src/less/post.less
@@ -107,7 +107,9 @@
 		}
 		@media(max-width: 600px) {
 			font-size: 1.4em;
-			width: 100%;
+			margin-left: calc(~"-50vw + 50%");
+			margin-right: calc(~"-50vw + 50%");
+			width: auto !important;
 			line-height: 1.3;
 			text-align: center;
 			font-weight: 500 !important;
@@ -723,7 +725,7 @@
 		}
 
 		pre > code {
-			background-color: #323335;
+			background-color: #303950;
 		}
 
 		p {
