--- a/src/less/pagination.less
+++ b/src/less/pagination.less
@@ -51,7 +51,7 @@
 	}
 
 	.btn {
-		max-width: 39%;
+		max-width: 37%;
 		line-height: 1.3;
 		font-size: 1em;
 		font-family: CompassSans-Regular;
@@ -75,6 +75,9 @@
 			}
 		}
 
+		i {
+			margin: 7px;
+		}
 
 		@media(max-width: 800px){
 			font-size: .9em;
@@ -82,6 +85,7 @@
 			 display: flex;
     	align-items: center;
 			height: 40px;
+			    width: 49%;
 		}
 	}
 }
