--- a/src/less/postheader.less
+++ b/src/less/postheader.less
@@ -84,9 +84,9 @@
 
       #account{
         display:none !important;
-				/*opacity: 0 !important;
+				opacity: 0 !important;
 				width: 0px !important;
-				overflow: hidden !important;*/
+				overflow: hidden !important;
       }
 
       li::before {
