--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -167,12 +167,12 @@
 			padding: 7px;
 			transition: all .1s ease-out;
 			 position: relative;
-			border-right: 1px solid rgba(255, 255,255, 0);/*
+			border-right: 1px solid rgba(255, 255,255, 0);
 			display:none !important;
 			opacity: 0 !important;
 			width: 0px !important;
 			overflow: hidden !important;
-*/
+
 
 			@media(max-width: 800px) {
 		  }
