--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -15,18 +15,20 @@
 	}
 
 	.branding {
-		width: 300px;
-		display: block;
-		position: absolute;
-		top: 0;
-		left: 0;
-		bottom: 0;
-		right: 0;
-		margin: auto;
-		height: fit-content;
-		max-height: 63px;
-		z-index: 9;
-		transition: all .3s easeout;
+		width: 270px;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    max-height: 58px;
+    z-index: 9;
+    transition: all .3s ease-out;
 
 		@media(max-width: 800px) {
 			width: 228px;
