--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -153,7 +153,7 @@
 		width: 100%;
 		padding-right: 100px;
 		justify-content: space-between;
-		max-width: 500px;
+		max-width: 470px;
 		@media(max-width:600) {
 			width: auto;
 			padding: 0;
@@ -170,6 +170,7 @@
 		.author-mobile {
 			display: none;
 			align-items: center;
+			margin-right:20px;
 
 			span {
 				text-transform: capitalize;
