--- a/src/less/pagination.less
+++ b/src/less/pagination.less
@@ -9,29 +9,69 @@
 	text-align: center;
 	display: block;
 	order: 20;
+	position: relative;
+	background: none;
 
-	a {
-		text-align: center;
-		display: inline-block;
-		color: #FFFFFF;
-		background: @theme-color;
-		border-radius: 0;
-		padding: 6px 13px;
+	.older-posts {
+		position: absolute;
+		right:0;
+		top: 0;
 
 		&:hover {
 			background: @hover-color;
 			text-decoration: none;
 			color: @white;
+			cursor: pointer;
 		}
 	}
 
+	.newer-posts {
+		position: absolute;
+		left:0;
+		top: 0;
+
+		&:hover {
+			background: @hover-color;
+			text-decoration: none;
+			color: @white;
+			cursor: pointer;
+		}
+	}
+
+	a,
+	strong {
+    text-align: center;
+    display: inline-block;
+    color: #828994;
+    background: none;
+    border-radius: 0;
+    padding: 9px 14px;
+    /* width: 20px; */
+    line-height: 1;
+    font-size: 1em;
+    font-weight: 700;
+
+		&:hover {
+			background: @hover-color;
+			text-decoration: none;
+			color: @white;
+			cursor: pointer;
+		}
+	}
+
+	strong {
+		background: #6e89b5 !important;
+		color: white !important;
+	}
+
 	.page-number {
-		background: @theme-color;
-		color: @white;
-		margin: 0 5px;
+		background: none;
+		margin: 0 auto;
 		display: inline-block;
 		line-height: 1;
-		padding: 12px 14px;
+		display: flex;
+		justify-content: space-between;
+		max-width: 70%;
 	}
 }
 
