--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -128,11 +128,11 @@
   }
 
   .pandas {
-    color: #c03694 !important;
-    background-color: lighten(#c03694, 50%);
+    color: #924c7c !important;
+    background-color: #f5e3ee;
 
     * {
-      color: #c03694 !important;
+      color: #924c7c !important;
     }
   }
 
@@ -219,7 +219,7 @@
     }
   }
 
-  .codesnippetcorner {
+  .code-snippet-corner {
     background: #d6dae6;
     color: #747d9a !important;
 
@@ -234,6 +234,15 @@
 
     * {
       color: #ad8303 !important;
+    }
+  }
+
+  .sql {
+    background: #e4e1ea;
+    color: #6a497b !important;
+
+    * {
+      color: #6a497b !important;
     }
   }
 
