--- a/src/less/post.less
+++ b/src/less/post.less
@@ -179,13 +179,15 @@
 	}
 
 	.post-meta {
-		margin: auto 80px 50px;
+		margin: auto 80px 40px;
 		color: #40627b;
 		font-size: 12px;
 		display: flex;
 		width: auto;
 		align-items: center;
 		justify-content: flex-start;
+		border-bottom: 1px solid #dfe5ec;
+		padding: 0 0 30px;
 
 		@media(max-width: 800px) {
 			margin: auto 40px 30px;
@@ -576,7 +578,7 @@
 			border-radius: 3px;
 			width: 100%;
 			font-size: 13px;
-			border: 1px solid #e5e9ef;
+			border: 1px solid #c5ceda;
 			border-spacing: 0;
 			@media(max-width: 600px) {
 				margin-left: calc(~"-50vw + 50%") !important;
