--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -25,6 +25,7 @@
 @import 'social.less';
 @import 'swiper.less';
 @import 'transactional.less';
+@import 'fonts.less';
 
 /*====================================================
 	about author and comment and next-prev link
