--- a/src/less/code.less
+++ b/src/less/code.less
@@ -1,3 +1,5 @@
+@import 'fonts.less';
+
 pre {
   white-space: pre-wrap;
   transition: all 0.5s easeout;
@@ -26,7 +28,7 @@ pre {
 &post-content > .hljs,
 pre > code {
   white-space: pre-wrap !important;
-  padding: 15px 20px !important;
+      padding: 45px 25px 15px!important;
   @media(max-width: 600px) {
     overflow-y: hidden !important;
     white-space: pre-line !important;
@@ -67,6 +69,24 @@ code {
 .python.hljs {
   color: #e4f8fd !important;
   background: #323335 !important;
+
+  &::before{
+    width: 100%;
+    height: auto;
+    background: #121925;
+    content: "Python";
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    position: absolute;;/*
+    margin-left: calc(~"-50vw + 50%") !important;
+    margin-right: calc(~"-50vw + 50%") !important;*/
+    top: 0;
+    left: 0;
+    padding: 4px 20px;
+  }
 /*
   &::before  {
     display: block;
@@ -187,6 +207,22 @@ code {
   .hljs-variable {
     color: #3fb44b;
   }
+
+  &::before{
+    width: 100%;
+    height: auto;
+    background: #121925;
+    content: "Javascript";
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 4px 20px;
+  }
 }
 
 code {
@@ -238,6 +274,22 @@ code {
   }
   .hljs-string {
     color: #c39dea;
+  }
+
+  &::before{
+    width: 100%;
+    height: auto;
+    background: #121925;
+    content: "JSON";
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 4px 20px;
   }
 }
 
