--- a/src/less/post.less
+++ b/src/less/post.less
@@ -41,7 +41,7 @@
 		line-height: 1.05;
 		display: block;
 		font-family: CompassSans-Medium !important;
-		font-size: 2.5em;
+		font-size: 2.2em;
 		font-weight: 500;
 		color: @h1-color;
 
@@ -790,11 +790,15 @@
 
 	figcaption {
 		text-align: center;
-		margin: 0 auto 40px;
-		font-size: 15px;
-		color: #757575;
-		white-space: nowrap;
-		font-style: italic;
+    margin: 0 auto 40px;
+    font-size: 15px;
+    color: #757575;
+    white-space: nowrap;
+    font-style: italic;
+    background-color: rgba(33, 69, 138, 0.08);
+    color: #4e5261;
+    padding: 10px;
+    margin-top: -10px;
 		@media(max-width: 600px) {
 			margin: 0 auto 70px;
 			font-size: 14px;
@@ -984,7 +988,7 @@
 		.material-placeholder,
 		figure {
 			width: fit-content;
-			margin: 40px auto 20px;
+			margin: 40px auto 0;
 
 			img {
 				max-width: 100%;
