--- a/src/less/code.less
+++ b/src/less/code.less
@@ -338,3 +338,75 @@ code {
   height: 100%;
   width: 100%;
 }
+
+.hljs.bash {
+  &::before {
+    width: 100%;
+    height: auto;
+    background: #121925;
+    content: "Bash";
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 4px 20px;
+  }
+}
+
+.hljs.sql {
+  &::before {
+    width: 100%;
+    height: auto;
+    background: #121925;
+    content: "SQL";
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 4px 20px;
+  }
+}
+
+.hljs.vim {
+  &::before {
+    width: 100%;
+    height: auto;
+    background: #121925;
+    content: "Vim";
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 4px 20px;
+  }
+}
+
+.hljs.css {
+  &::before {
+    width: 100%;
+    height: auto;
+    background: #121925;
+    content: "CSS";
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 4px 20px;
+  }
+}
