--- a/src/less/post.less
+++ b/src/less/post.less
@@ -15,7 +15,7 @@
 		}
 
 		article {
-			margin: 5vw auto 0;
+			margin: 4vw auto 0;
 			box-shadow: @shadow-color;
 
 			@media(max-width: 800px) {
@@ -83,7 +83,7 @@
 			font-weight: 600;
 		}
 		@media(max-width: 600px) {
-			font-size: em;
+			font-size: 1em;
 			line-height: 1.3;
 			max-width: 95%;
 			text-align: center;
@@ -196,7 +196,7 @@
 		@media(max-width: 600px) {
 			display: flex;
 			justify-content: space-between;
-			padding: 0;
+			padding: 0 0 15px 0;
 			max-width: none;
 			width: auto;
 			margin: 0 18px !important;
@@ -687,7 +687,7 @@
 		}
 		@media(max-width: 600px) {
 			margin: 0 15px;
-			padding: 20px 0 30px;
+			padding: 20px 0;
 			border-bottom: 0;
 		}
 	}
