added language support for hljs

--- a/src/less/code.less
+++ b/src/less/code.less
@@ -410,3 +410,21 @@ code {
     padding: 4px 20px;
   }
 }
+
+.hljs.shell {
+  &::before {
+    width: 100%;
+    height: auto;
+    background: #121925;
+    content: "CSS";
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 4px 20px;
+  }
+}
