--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -102,7 +102,7 @@
 
   .roundup {
     color: #666fa5 !important;
-    background-color: lighten(#666fa5, 40%);
+    background-color: #e0e5ec;
 
     * {
       color: #666fa5 !important;
