--- a/src/less/author.less
+++ b/src/less/author.less
@@ -30,7 +30,6 @@
 					display: inline-block;
 					margin-right: 15px;
 					height: 70px;
-					border-radius: 50%;
 				}
 
 				.info {
@@ -236,6 +235,10 @@
 		.avatar {
 			float: none !important;
 			margin: 0 !important;
+
+			.meta-info {
+				    margin-right: 15px;
+			}
 		}
 
 		h3 {
@@ -244,7 +247,7 @@
 		}
 
 		.bio {
-			max-width: 500px;
+			max-width: 630px;
 			margin: 15px auto 0;
 		}
 	}
