author and tag covers

--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -26,7 +26,7 @@
 @import 'swiper.less';
 @import 'transactional.less';
 @import 'fonts.less';
-@import 'screen.less';
+@import 'cover.less';
 
 /*====================================================
 	about author and comment and next-prev link
