--- a/src/less/cover.less
+++ b/src/less/cover.less
@@ -1,3 +1,4 @@
+@import "variables.less";
 /*====================================================
 	Tag page & author page cover
 ====================================================*/
