--- a/partials/widget-github.hbs
+++ b/partials/widget-github.hbs
@@ -24,11 +24,11 @@
   //const  = stitch.Stitch.initializeDefaultAppClient('authors-rxtmg');
   //const db = .getServiceClient(stitch.RemoteMongoClient.factory, 'mongodb-atlas').db('blog');
 
-  client.auth.loginWithCredential(new stitch.AnonymousCredential()).then(user => {
+  stitchClient.auth.loginWithCredential(new stitch.AnonymousCredential()).then(user => {
     console.log('logged in anonymously as user')
   });
 
-  client.callFunction("getGithubUsers", ["{{slug}}"]).then(result => {
+  stitchClient.callFunction("getGithubUsers", ["{{slug}}"]).then(result => {
     console.log(JSON.stringify(result))
     console.log(result.github)
     if (result.github) {createCard(result.github)}
