--- a/src/less/author.less
+++ b/src/less/author.less
@@ -14,6 +14,11 @@
 
 		.github {
 			order: 1;
+
+			.content {
+				padding: 5px 14px;
+    		background: white;
+			}
 		}
 
 		.twitter {
@@ -22,6 +27,9 @@
 
 		.meetup {
 			order: 2;
+			background: white;
+			padding: 0 12px;
+
 			.userprofile {
 				padding-bottom: 10px;
 				margin-bottom: 10px;
