--- a/partials/widget-authorwebsite.hbs
+++ b/partials/widget-authorwebsite.hbs
@@ -24,7 +24,7 @@ $(document).ready(function(){
       }
     });
   }
-  websiteCard({{website}});
+  websiteCard('{{website}}');
 })
  </script>
   <!-- end widget -->
