--- a/src/less/cover.less
+++ b/src/less/cover.less
@@ -38,6 +38,10 @@
 		width: 81%;
 		margin: auto;
 
+    @media(max-width: 600px) {
+      flex-direction: column;
+    }
+
 		span {
 			margin: 0 7px;
 
