--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -176,7 +176,7 @@
         margin: 0;
         height: 85px;
 
-        
+
       }
     }
 
@@ -252,6 +252,7 @@
           display: inline;
         }
         @media(max-width: 600px) {
+          margin: 0 0 3px;
           display: block !important;
           width: 100%;
         }
