--- a/src/less/pagination.less
+++ b/src/less/pagination.less
@@ -58,6 +58,14 @@
 		}
 	}
 
+	@media(max-width: 600px) {
+		a:nth-of-type(7),
+		a:nth-of-type(8) {
+			display: none;
+		}
+	}
+
+
 	strong {
 		background: #6e89b5 !important;
 		color: white !important;
