--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -92,8 +92,8 @@
   }
 
   .data {
-    color: #1cccae !important;
-    background-color: lighten(#1cccae, 50%);
+    color: #009279!important;
+    background-color:  #d7efea;
 
     * {
       color: #1cccae !important;
