--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -30,7 +30,7 @@
 			line-height: 1.5em;
 			font-size: 1em;
 			font-weight: 500;
-			color: #2d2f35;
+			color: #4D4146;
 			@media(max-width: 600px) {
 				font-size: 0.9em;
 				line-height: 1.6em;
@@ -94,7 +94,7 @@
 			font-weight: 500;
 			text-align: left;
 			font-size: 1.3em;
-			color: #404146;
+			color: #40464F;
 			font-family: 'CompassSans-Regular', AvenirNextLTPro-Regular,serif;
 			@media(max-width: 800px) {
 				font-size: 1.18em;
@@ -281,7 +281,7 @@
 			height: 30px;
 			display: inline-block;
 			margin-right: 10px;
-			border-radius: 50%;
+ 		  border-radius: 1px;
 			@media(max-width: 600px) {
 				margin-right: 15px;
 			}
