--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -319,26 +319,26 @@
 	}
 
 	.btn {
-		font-size: 16px;
-		font-family: 'AvenirNextLTPro-Medium',serif;
-		text-transform: uppercase;
-		padding: 14px 20px;
-		line-height: 1;
-		height: 14px;
+		font-size: 18px;
+    font-family: 'CompassSans-Medium';
+    text-transform: uppercase;
+    padding: 16px 30px;
+    line-height: 1;
+    height: 15px;
+    letter-spacing: 1px;
 		background: @button-color;
 		border-bottom: 1px solid #009c83;
 		border-right: 2px solid #009c83;
 		transition: all .3s ease-out;
 
 		&:hover {
-
 			border-bottom: 1px solid #00309c;
 			border-right: 2px solid #004d9c;
 		}
 
 		@media(max-width: 600px) {
 			padding: 13px 18px;
-			font-family: AvenirNextLTPro-Regular,serif;
+			font-size: 16px;
 		}
 	}
 }
