--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -228,7 +228,7 @@
 
 			a {
 				color: #fff;
-		    font-family: 'CompassSans-Regular',serif;
+		    font-family: 'CompassSans-Medium',serif;
 		    text-transform: uppercase;
 				font-size: 16px;
 				font-weight: 300;
