--- a/src/less/code.less
+++ b/src/less/code.less
@@ -12,7 +12,6 @@ pre {
     margin-left: calc(~"-50vw + 50%") !important;
     margin-right: calc(~"-50vw + 50%") !important;
     width: auto !important;
-    white-space: pre-line !important;
     max-height: 400px;
   }
 
@@ -69,7 +68,7 @@ code {
   background: #273041 !important;
 
   &::before {
-    width: 100%;
+    width: auto;
     height: auto;
     background: #121925;
     content: "Python";
@@ -139,7 +138,6 @@ code {
     /* padding: 20px; */
     margin-left: calc(~"-50vw + 50%") !important;
     margin-right: calc(~"-50vw + 50%") !important;
-    white-space: pre-line !important;
     font-size: 12px;
   }
 }
@@ -204,7 +202,7 @@ code {
   }
 
   &::before {
-    width: 100%;
+    width: auto;
     height: auto;
     background: #121925;
     content: "Javascript";
@@ -267,7 +265,7 @@ code {
   }
 
   &::before {
-    width: 100%;
+    width: auto;
     height: auto;
     background: #121925;
     content: "JSON";
@@ -331,7 +329,7 @@ code {
 
 .hljs.bash {
   &::before {
-    width: 100%;
+    width: auto;
     height: auto;
     background: #121925;
     content: "Bash";
@@ -349,7 +347,7 @@ code {
 
 .hljs.sql {
   &::before {
-    width: 100%;
+    width: auto;
     height: auto;
     background: #121925;
     content: "SQL";
@@ -367,7 +365,7 @@ code {
 
 .hljs.vim {
   &::before {
-    width: 100%;
+    width: auto;
     height: auto;
     background: #121925;
     content: "Vim";
@@ -385,7 +383,7 @@ code {
 
 .hljs.css {
   &::before {
-    width: 100%;
+    width: auto;
     height: auto;
     background: #121925;
     content: "CSS";
@@ -403,7 +401,7 @@ code {
 
 .hljs.shell {
   &::before {
-    width: 100%;
+    width: auto;
     height: auto;
     background: #121925;
     content: "CSS";
@@ -421,7 +419,7 @@ code {
 
 .hljs.ini {
   &::before {
-    width: 100%;
+    width: auto;
     height: auto;
     background: #121925;
     content: "ini";
