--- a/src/less/code.less
+++ b/src/less/code.less
@@ -72,12 +72,13 @@ code {
     height: auto;
     background: #121925;
     content: "Python";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
+    position: relative;
+    margin: 0 -5px 15px;
     /*
     margin-left: calc(~"-50vw + 50%") !important;
     margin-right: calc(~"-50vw + 50%") !important;*/
@@ -206,15 +207,14 @@ code {
     height: auto;
     background: #121925;
     content: "Javascript";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
     padding: 4px 20px;
+    margin: 0 -5px 15px;
   }
 }
 
@@ -269,15 +269,14 @@ code {
     height: auto;
     background: #121925;
     content: "JSON";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
     padding: 4px 20px;
+    margin: 0 -5px 15px;
   }
 }
 
@@ -333,15 +332,14 @@ code {
     height: auto;
     background: #121925;
     content: "Bash";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
     padding: 4px 20px;
+    margin: 0 -5px 15px;
   }
 }
 
@@ -351,14 +349,13 @@ code {
     height: auto;
     background: #121925;
     content: "SQL";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
+    margin: 0 -5px 15px;
     padding: 4px 20px;
   }
 }
@@ -369,15 +366,14 @@ code {
     height: auto;
     background: #121925;
     content: "Vim";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
     padding: 4px 20px;
+    margin: 0 -5px 15px;
   }
 }
 
@@ -387,14 +383,13 @@ code {
     height: auto;
     background: #121925;
     content: "CSS";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
+    margin: 0 -5px 15px;
     padding: 4px 20px;
   }
 }
@@ -405,14 +400,13 @@ code {
     height: auto;
     background: #121925;
     content: "CSS";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
+    margin: 0 -5px 15px;
     padding: 4px 20px;
   }
 }
@@ -423,14 +417,13 @@ code {
     height: auto;
     background: #121925;
     content: "ini";
-    display: inline-block;
+    display: block;
     font-style: normal;
     font-variant: normal;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
+    margin: 0 -5px 15px;
     padding: 4px 20px;
   }
 }
