--- a/src/less/code.less
+++ b/src/less/code.less
@@ -60,6 +60,7 @@ code {
   line-height: 1.5;
   white-space: pre-wrap !important;
   color: #d3dce0;
+  padding: 0 20px 20px;
 }
 
 .language-python,
@@ -78,7 +79,7 @@ code {
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     position: relative;
-    margin: 0 -5px 15px;
+    margin: 0 -17px 15px;
     /*
     margin-left: calc(~"-50vw + 50%") !important;
     margin-right: calc(~"-50vw + 50%") !important;*/
@@ -214,7 +215,7 @@ code {
     -webkit-font-smoothing: antialiased;
     position: relative;
     padding: 4px 20px;
-    margin: 0 -5px 15px;
+    margin: 0 -17px 15px;
   }
 }
 
@@ -276,7 +277,7 @@ code {
     -webkit-font-smoothing: antialiased;
     position: relative;
     padding: 4px 20px;
-    margin: 0 -5px 15px;
+    margin: 0 -17px 15px;
   }
 }
 
@@ -339,7 +340,7 @@ code {
     -webkit-font-smoothing: antialiased;
     position: relative;
     padding: 4px 20px;
-    margin: 0 -5px 15px;
+    margin: 0 -17px 15px;
   }
 }
 
@@ -355,7 +356,7 @@ code {
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     position: relative;
-    margin: 0 -5px 15px;
+    margin: 0 -17px 15px;
     padding: 4px 20px;
   }
 }
@@ -373,7 +374,7 @@ code {
     -webkit-font-smoothing: antialiased;
     position: relative;
     padding: 4px 20px;
-    margin: 0 -5px 15px;
+    margin: 0 -17px 15px;
   }
 }
 
@@ -389,7 +390,7 @@ code {
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     position: relative;
-    margin: 0 -5px 15px;
+    margin: 0 -17px 15px;
     padding: 4px 20px;
   }
 }
@@ -406,7 +407,7 @@ code {
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     position: relative;
-    margin: 0 -5px 15px;
+    margin: 0 -17px 15px;
     padding: 4px 20px;
   }
 }
@@ -423,7 +424,7 @@ code {
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     position: relative;
-    margin: 0 -5px 15px;
+    margin: 0 -17px 15px;
     padding: 4px 20px;
   }
 }
