--- a/src/less/code.less
+++ b/src/less/code.less
@@ -66,7 +66,7 @@ code {
 .language-python,
 .python.hljs {
   color: #e4f8fd !important;
-  background: #273041 !important;
+  background: #1B2E46 !important;
 
   &::before {
     width: auto;
