--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -18,9 +18,8 @@
 		width: 270px;
     display: block;
     position: absolute;
-    top: 0;
+    top: 60px;
     left: 0;
-    bottom: 0;
     right: 0;
     margin: auto;
     height: -webkit-fit-content;
@@ -32,7 +31,7 @@
 
 		@media(max-width: 800px) {
 			width: 228px;
-	 		height: 77px;
+	 		height: 49px;
 		}
 
 		img {
@@ -213,7 +212,7 @@
 			max-width: 234px;
 			left: 0;
 			right: 0;
-			margin: 145px auto;
+			margin: 145px auto 0;
 			float: none;
 			padding: 0;
 			line-height: 1;
