--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -270,10 +270,11 @@
   }
 
   p {
-    font-size: 14px;
+    font-size: 1em;
     color: #505050;
     margin: 0 auto;
     font-weight: 100;
+    line-height: 2;
   }
 
   .tag-wrapper {
@@ -401,15 +402,17 @@
 
       p {
         font-size: 14px;
-        color: @text-color;
+        color: #2f2f2f;
         margin: 5px 0;
-        line-height: 1.2;
+        line-height: 1.3;
         text-align: left;
         font-weight: 100;
         font-family: AvenirNextLTPro-Light;
       }
 
       span {
+        position: absolute;
+        bottom: 15px;
         font-size: 0.7em;
         line-height: 1.5;
         color: #37363F;
