--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -138,8 +138,8 @@
 					font-size: 16px;
 					margin: 0;
 					line-height: 1.4;
-					font-family: AvenirNextLTPro-Regular,sans-serif !important;
-					font-weight: 500;
+					font-family: CompassSans-Regular,sans-serif!important;
+    			font-weight: 600;
 					display: block;
 
 					&:hover {
