--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -22,7 +22,7 @@
 			top: 13px;
 			position: absolute;
 			color: #9aa1bd;
-			font-size: 1.2em;
+			font-size: 1em;
 		}
 
 		#my-custom-input {
@@ -221,6 +221,28 @@
 		}
 
 		.newsletter {
+
+			.form-group {
+				position: relative;
+				&::after {
+					content: '\f0e0';
+					font-family: "Font Awesome 5 Pro";
+					font-weight: 100;
+					display: inline-block;
+					font-style: normal;
+					-webkit-font-feature-settings: normal;
+					font-feature-settings: normal;
+					font-variant: normal;
+					text-rendering: auto;
+					-webkit-font-smoothing: antialiased;
+					right: 17px;
+					top: 11px;
+					position: absolute;
+					color: #9aa1bd;
+					font-size: 1.1em;
+				}
+			}
+
 			button {
 				width: 100%;
 				background: linear-gradient(135deg,#40a270,#1f8ea7);
@@ -244,6 +266,8 @@
 				font-weight: 100;
 				border: 1px solid #d5dbe6;
 				transition: all 0.3s all;
+
+
 
 				&::placeholder {
 					opacity: 0.7;
