--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -18,7 +18,8 @@
 		width: 270px;
     display: block;
     position: absolute;
-    top: 60px;
+    top:0;
+		bottom: 0;
     left: 0;
     right: 0;
     margin: auto;
@@ -32,6 +33,8 @@
 		@media(max-width: 800px) {
 			width: 228px;
 	 		height: 49px;
+			top: 60px;
+			bottom: auto;
 		}
 
 		img {
